# nupevid-api

./: .dockerignore  .env.example  CIDADES_BATALHOES_ESTADO.md  Cargo.toml  Dockerfile  RANK.md  README.md  TESTING.md  docker-compose-local.yml  docker-compose.yml  nupevid-backend.postman_collection.json  nupevid-backend.postman_environment.json  politicas_de_permissão_nupevid.md  swagger.yml  test.sh
migrations/: 20251116021016_create_users_table.sql  20251118232835_change_registration_to_varchar.sql  20251121223422_create_cities_table.sql  20251121224545_add_city_and_soft_delete_to_users.sql  20251121230334_create_victims_and_victim_addresses_tables.sql  20251121232916_create_protective_measures_table.sql  20251121234303_create_attendances_and_attendance_addresses_tables.sql  20251122153923_change_lat_lng_to_double_precision.sql  20251123212024_rename_document_id_to_cpf_in_victims.sql  20251123212047_add_valid_until_to_protective_measures.sql  20251123213533_add_permission_policies_to_users.sql  20251123235811_change_court_district_to_city_id.sql  20251124001846_change_city_name_to_city_id_in_addresses.sql  20251203163845_create_victim_enums.sql  20251203163846_add_new_fields_to_victims.sql  20251203163847_create_victim_phones_table.sql  20251204000001_create_offender_enums.sql  20251204000002_create_offender_work_addresses_table.sql  20251204000003_create_offender_phones_table.sql  20251204000004_create_offender_addresses_table.sql  20251204000005_create_offenders_table.sql  20251204120000_create_phone_type_enum_and_update_tables.sql  20251207000001_add_fields_to_protective_measures.sql  20251207000002_create_protective_measure_extensions_table.sql  20251208000001_add_education_and_assaults_children_to_offenders.sql  20251208000002_add_occurrence_report_and_offender_to_protective_measures.sql  20251208000003_rename_attendances_to_attendance_victims.sql  20251208000004_add_new_fields_to_attendance_victims.sql  20251209161557_create_attendance_offenders_tables.sql  (+20 more)
src/: app_factory.rs  lib.rs  main.rs
(+443 files in other folders)
