[package]
name = "nupevid-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
lazy_static = "1.5.0"
log = "0.4.28"
regex = "1.12.2"
serde = { version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "tls-native-tls", "chrono", "runtime-tokio", "tls-rustls", "migrate"] }
thiserror = "2.0.17"
uuid = { version="1.18.1", features= ["serde", "v4"] }
